# multimedia_finder

./: CMakeLists.txt  README.md  checkmanager.cpp  main.cpp  reportwriter.h  utils.hpp
include/: checker.h  checkmanager.h  dirvisitor.h  reportwriter.h  utils.hpp
src/: checker.cpp  checkmanager.cpp  dirvisitor.cpp  main.cpp  reportwriter.cpp
